--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,8 @@
 TZ=Asia/Bangkok
 
 # MongoDB Connection Settings
-MONGO_HOST=localhost
-MONGO_PORT=27017
+MONGODB_URI=mongodb://localhost:27017
 MONGO_DB=
-MONGO_USER=
-MONGO_PASSWORD=
-MONGO_AUTH_DB=admin
 
 # Backup Settings
 BACKUP_DIR=/backup
@@ -19,5 +15,4 @@ DATE_FORMAT=%Y%m%d_%H%M%S
 CRON_SCHEDULE=5 0 * * *
 
 # Restore Settings (for restore operations)
-RESTORE_FILE=
 DROP_EXISTING=false
